--- a/index.html
+++ b/index.html
@@ -1,1 +1,176 @@
-<h1>Welcome</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Amazon</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="Stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="navbar">
+            <div class="nav-logo">
+                <div class="logo"></div>
+            </div>
+            <div class="address">
+                <p class="address1">Deliver to</p>
+                <div class="add-icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p class="address2">India</p>
+                </div>
+            </div>
+            <div class="nav-search">
+                <select class="select">
+                    <option>All</option>
+                </select>
+                <input type="text" placeholder="Search Amazon" id="searchinput">
+                <div class="search-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </div>
+            <div class="nav-sign border">
+                <p class="para1"><span>Hello, sign-in</span></p>
+                <p class="para2">Account & Lists</p>
+            </div>
+            <div class="nav-return border">
+                <p class="para1"><span>Return</span></p>
+                <p class="para2">& Orders</p>
+            </div>
+            <div class="nav-cart border">
+                <i class="fa-solid fa-cart-shopping"></i>
+                Cart
+            </div>
+        </div>
+        <div class="pannel">
+            <div class="pannel-all">
+                <i class="fa-solid fa-list"></i>
+                All
+            </div>
+            <div class="pannel-ops">
+                <p>Today's Deal</p>
+                <p>Customer Service</p>
+                <p>Register</p>
+                <p>Gift cards</p>
+                <p>Sell</p>
+            </div>
+            <div class="pannel-deal">
+                Shop deal in Electronics
+            </div>
+        </div>
+    </header>
+    <div class="hero-section">
+        <div class="hero-msg">
+            <P>You are on Amazon.com. You can Shop on amazon India for millions of people with local delivery.  <a href="www.amazon.com">click hear to go.</a></P>
+        </div>
+    </div>
+    <div class="shop-section">
+        <div class="box1 box">
+            <div class="box-content">
+                <h2>Health and Personal Care</h2>
+            <div class="box-image" style="background-image: url('box1.png');"></div>
+            <p>see more</p>
+            </div>
+        </div>
+        <div class="box2 box">
+            <div class="box-content">
+                <h2>Pick up where you left off</h2>
+            <div class="box-image" style="background-image: url('box2.png');"></div>
+            <p>see more</p>
+            </div>
+        </div>
+        <div class="box3 box">
+            <div class="box-content">
+                <h2>Continue shopping deals</h2>
+            <div class="box-image" style="background-image: url('box3.png');"></div>
+            <p>see more</p>
+            </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+                <h2>Category to explore</h2>
+            <div class="box-image" style="background-image: url('box4.png');"></div>
+            <p>see more</p>
+            </div>
+        </div>
+        <div class="box1 box">
+            <div class="box-content">
+                <h2>Deal related to item you saved</h2>
+            <div class="box-image" style="background-image: url('box5.png');"></div>
+            <p>see more</p>
+            </div>
+        </div>
+        <div class="box2 box">
+            <div class="box-content">
+                <h2>Revamp your home in style</h2>
+            <div class="box-image" style="background-image: url('box6.png');"></div>
+            <p>see more</p>
+            </div>
+        </div>
+        <div class="box3 box">
+            <div class="box-content">
+                <h2>Up to 60% off | Footwear & handbags</h2>
+            <div class="box-image" style="background-image: url('box7.png');"></div>
+            <p>see more</p>
+            </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+                <h2>Up to 75% off | international brands</h2>
+            <div class="box-image" style="background-image: url('box8.png');"></div>
+            <p>see more</p>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="foot-pannel1">
+            Back to Top
+        </div>
+        <div class="foot-pannel2">
+            <ul>
+                <p>Get to Know Us</p>
+                <a href="">About Amazon</a>
+                <a href="">Careers</a>
+                <a href="">Press Releases</a>
+                    <a href="">Amazon Science</a>
+            </ul>
+            <ul>
+                <p>Get to Know Us</p>
+                <a href="">About Amazon</a>
+                <a href="">Careers</a>
+                <a href="">Press Releases</a>
+                    <a href="">Amazon Science</a>
+            </ul>
+            <ul>
+                <p>Get to Know Us</p>
+                <a href="">About Amazon</a>
+                <a href="">Careers</a>
+                <a href="">Press Releases</a>
+                    <a href="">Amazon Science</a>
+            </ul>
+            <ul>
+                <p>Get to Know Us</p>
+                <a href="">About Amazon</a>
+                <a href="">Careers</a>
+                <a href="">Press Releases</a>
+                    <a href="">Amazon Science</a>
+            </ul>   
+        </div>
+        <div class="foot-pannel3">
+            <div class="logo">
+
+            </div>
+        </div>
+        <div class="foot-pannel4">
+            <div class="foot-ops">
+                <a>Condition of use</a>
+                <a>Privacy notice</a>
+                <a>Your ads privacy choices</a>
+            </div>
+            <div class="copy">
+                © 1996-2025, Amazon.com, Inc. or its affiliates
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
